# pdf_validator_rs

./: .gitignore  CHANGELOG.md  CODE_REVIEW_ANALYSIS.md  Cargo.toml  INTEGRATION_TESTS_SUMMARY.md  README.md  perplexity_git_rev.md  research_questions.md  rust-memsafe.md  validation_report_rust.txt
docs/: API_REFERENCE.md  BUILD_GUIDE.md  PERFORMANCE.md  README.md
docs/diagrams/: module-structure.md  overall-flow.md  parallel-architecture.md  validation-strategy.md
examples/: diagnose_discrepancies.rs
src/: lib.rs  main.rs
src/core/: circuit_breaker.rs  mod.rs  validator.rs
src/reporting/: mod.rs  report_writer.rs
src/scanner/: duplicate_detector.rs  file_scanner.rs  mod.rs
tests/: README.md  circuit_breaker_test.rs  error_isolation_test.rs  malformed_pdf_test.rs
tests/fixtures/: README.md
